(lang dune 3.17)

(name aoc2024)

(generate_opam_files true)

(source
 (github cuterebro/aoc2024))

(authors "Cuterebro <cuterebro@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc2024)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
